Including styles + changes to knowledge

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Online C.V. Servaas Phlips</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="Content/bootstrap-theme.css" type="text/css" />
-    <!--<link rel="stylesheet" href="app.css" type="text/css" />-->
+    <link rel="stylesheet" href="ApplicationStyles/Cv.css" type="text/css" />
     <script src="Scripts/angular.js" type="text/javascript"></script>
     <script src="Scripts/angular-animate.js" type="text/javascript"></script>
     <script src="Scripts/angular-route.js" type="text/javascript"></script>
