--- a/overview-en.html
+++ b/overview-en.html
@@ -386,6 +386,7 @@
                     <dd>
                         <p>Pluralsight Trainings</p>
                         <p class="keywords">
+                            AngularJs,
                             .NET Reflector by Example,
                             CLR Threading
                             SpecFlow Tips and Tricks,
