--- a/overview-nl.html
+++ b/overview-nl.html
@@ -83,8 +83,8 @@
 
                 <h4>sleutelwoorden</h4>
                 <p class="keywords">
-                    C#, .NET 3.5/4.0/4.5, Agile Methodologies, SCRUM Master, WPF, MVVM(C), WCF, webservices, Teamcity, msbuild, Linq,
-                    Oracle, ms SQL, Entity Framework, WiX, MSI, SVN, Team lead, VS 2010/2012, MSMQ, NServiceBus, Telerik controls, Git
+                    C#, .NET 3.5/4.0/4.5, Agile Methodologies, SCRUM Master, WPF, MVVM(C), WCF, REST, webservices, Teamcity, msbuild, Linq,
+                    Oracle, ms SQL, Entity Framework, WiX, MSI, SVN, Team lead, VS 2010/2012/2013, MSMQ, NServiceBus, Telerik controls, Git
                 </p>
 
                 <h4>Scrum Master ITS BO (2013 - nu)</h4>
@@ -383,6 +383,7 @@
                     <dd>
                         <p>Pluralsight Trainings</p>
                         <p class="keywords">
+                            AngularJs,
                             .NET Reflector by Example,
                             CLR Threading
                             SpecFlow Tips and Tricks,
