--- a/overview-en.html
+++ b/overview-en.html
@@ -35,24 +35,7 @@
                 </dd>
                 <dt>E-mail</dt>
                 <dd>
-
-                    <script type="text/javascript">
-                        <!--
-            showEncodedData();
-          // -->
-                    </script>
-
-                    <noscript>
-                        <p>
-                            <b>xservix (at) xtelenetx {dot} be</b><br />
-                            Leave no spaces in previous line, remove every x, replace (at) with @ and {dot} with .
-                        </p>
-                    </noscript>
-                </dd>
-                <dt>Online CV</dt>
-                <dd>
-                    <a class="longText" href="http://users.telenet.be/phlips/servaas/">http://users.telenet.be/phlips/servaas/index.en-us.html</a>
-                    <a class="shortText" href="http://users.telenet.be/phlips/servaas/">http://goo.gl/4o97re</a>
+                    <a href="mailto:servi@telenet.be?subject=Cv">mail me</a>
                 </dd>
             </dl>
         </div>
