--- a/overview-nl.html
+++ b/overview-nl.html
@@ -35,26 +35,7 @@
                 </dd>
                 <dt>E-mail</dt>
                 <dd>
-
-                    <script type="text/javascript">
-                        <!--
-            showEncodedData();
-          // -->
-                    </script>
-
-                    <noscript>
-                        <p>
-                            U heeft een browser zonder javascript of u heeft javascript afgezet, alternatieve
-                            versie :<br />
-                            <b>xservix (at) xtelenetx {punt} be</b><br />
-                            Schrijf alles aaneen, haal elke x weg en vervang (at) door @ en {punt} door .
-                        </p>
-                    </noscript>
-                </dd>
-                <dt>Online CV</dt>
-                <dd>
-                    <a class="longText" href="http://users.telenet.be/phlips/servaas/">http://users.telenet.be/phlips/servaas/</a>
-                    <a class="shortText" href="http://users.telenet.be/phlips/servaas/">http://goo.gl/4o97re</a>
+                    <a href="mailto:servi@telenet.be?subject=Cv">mail me</a>
                 </dd>
             </dl>
         </div>
