inlcuding showing on map

--- a/overview-en.html
+++ b/overview-en.html
@@ -13,9 +13,10 @@
                     Phlips
                 </dd>
                 <dt>Address</dt>
-                <dd>
+                <dd data-ng-controller="MapController">
                     Leeuwerikenstraat 55 / 407<br />
-                    3001 Heverlee
+                    3001 Heverlee<br />
+                    <button class="btn" ng-click="OpenMap()">on map</button>
                 </dd>
                 <dt>Born</dt>
                 <dd>
