--- a/index.html
+++ b/index.html
@@ -3,14 +3,20 @@
 <head>
     <title>Online C.V. Servaas Phlips</title>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="Content/bootstrap.css" type="text/css" />
     <link rel="stylesheet" href="Content/bootstrap-theme.css" type="text/css" />
     <link rel="stylesheet" href="ApplicationStyles/Cv.css" type="text/css" />
     <script src="Scripts/angular.js" type="text/javascript"></script>
     <script src="Scripts/angular-animate.js" type="text/javascript"></script>
     <script src="Scripts/angular-route.js" type="text/javascript"></script>
+    <script src="Scripts/angular-ui/ui-bootstrap.js" type="text/javascript"></script>
+    <script src="Scripts/angular-ui/ui-bootstrap-tpls.js" type="text/javascript"></script>
+    <script src="Scripts/lodash.js" type="text/javascript"></script>
+    <script src="Scripts/angular-google-maps.js" type="text/javascript"></script>
     <script src="ApplicationScripts/Application.js" type="text/javascript"></script>
     <script src="ApplicationScripts/LanguageController.js" type="text/javascript"></script>
     <script src="ApplicationScripts/CvController.js" type="text/javascript"></script>
+    <script src="ApplicationScripts/MapController.js" type="text/javascript"></script>
 </head>
 <body data-ng-app="CvBrowser">
 
@@ -22,7 +28,7 @@
             <div id="languageBar" data-ng-controller="LanguageController">
                 <div id="languageSelectionBar">
                     <form>
-                        <select id="languageSelection" data-ng-model="selectedLanguage" ng-change="ChangeLangauge(selectedLanguage)" data-ng-options="item.key as item.label for item in languages">
+                        <select class="form-control" id="languageSelection" data-ng-model="selectedLanguage" ng-change="ChangeLangauge(selectedLanguage)" data-ng-options="item.key as item.label for item in languages">
                         </select>
                     </form>
                 </div>
@@ -30,6 +36,7 @@
 
         </div>
     </div>
+
 
     <div data-ng-view id="content">
     </div>
