--- a/overview-nl.html
+++ b/overview-nl.html
@@ -13,9 +13,10 @@
                     Phlips
                 </dd>
                 <dt>Adres</dt>
-                <dd>
+                <dd data-ng-controller="MapController">
                     Leeuwerikenstraat 55 / 407<br />
-                    3001 Heverlee
+                    3001 Heverlee<br />
+                    <button class="btn" ng-click="OpenMap()">op kaart</button>
                 </dd>
                 <dt>Geboren</dt>
                 <dd>
