update cv + fix path to map controller

--- a/overview-en.html
+++ b/overview-en.html
@@ -14,8 +14,8 @@
                 </dd>
                 <dt>Address</dt>
                 <dd data-ng-controller="MapController">
-                    Leeuwerikenstraat 55 / 407<br />
-                    3001 Heverlee<br />
+                    Leo Meulemansstraat 3 / 103<br />
+                    3020 Herent<br />
                     <button class="btn" ng-click="OpenMap()">on map</button>
                 </dd>
                 <dt>Born</dt>
@@ -65,8 +65,8 @@
 
                 <h4>keywords</h4>
                 <p class="keywords">
-                    C#, .NET 3.5/4.0/4.5, Agile Methodologies, SCRUM Master, WPF, MVVM(C), WCF, webservices, Teamcity, msbuild, Linq,
-                    Oracle, ms SQL, Entity Framework, WiX, MSI, SVN, Team lead, VS 2010/2012, MSMQ, NServiceBus, Telerik controls, Git
+                    C#, .NET 3.5/4.0/4.5, Agile Methodologies, SCRUM Master, WPF, MVVM(C), WCF, REST, webservices, Teamcity, msbuild, Linq,
+                    Oracle, ms SQL, Entity Framework, WiX, MSI, SVN, Team lead, VS 2010/2012/2013, MSMQ, NServiceBus, Telerik controls, Git
                 </p>
 
                 <h4>Scrum Master ITS BO (2013 - nu)</h4>
@@ -370,6 +370,8 @@
                     <dd>
                         <p>Pluralsight Trainings</p>
                         <p class="keywords">
+                            Angular 2.0,
+                            Typescript,
                             AngularJs,
                             .NET Reflector by Example,
                             CLR Threading
@@ -382,6 +384,11 @@
                             REST Fundamentals
                         </p>
                     </dd>
+                </dl>
+
+                <dl>
+                    <dt>2016</dt>
+                    <dd>Techorama Developer Conference, Mechelen</dd>
                 </dl>
 
                 <dl>
