--- a/overview-nl.html
+++ b/overview-nl.html
@@ -14,8 +14,8 @@
                 </dd>
                 <dt>Adres</dt>
                 <dd data-ng-controller="MapController">
-                    Leeuwerikenstraat 55 / 407<br />
-                    3001 Heverlee<br />
+                    Leo Meulemansstraat 3 / 103<br />
+                    3020 Herent<br />
                     <button class="btn" ng-click="OpenMap()">op kaart</button>
                 </dd>
                 <dt>Geboren</dt>
@@ -365,6 +365,8 @@
                     <dd>
                         <p>Pluralsight Trainings</p>
                         <p class="keywords">
+                            Angular 2.0,
+                            Typescript,
                             AngularJs,
                             .NET Reflector by Example,
                             CLR Threading
@@ -377,6 +379,11 @@
                             REST Fundamentals
                         </p>
                     </dd>
+                </dl>
+
+                <dl>
+                    <dt>2016</dt>
+                    <dd>Techorama Developer Conference, Mechelen</dd>
                 </dl>
 
                 <dl>
