ensured that everything is up to date for the cv

--- a/overview-en.html
+++ b/overview-en.html
@@ -58,7 +58,7 @@
         <h2>Work experience</h2>
 
         <div class="details">
-            <h3>Prodata Mobility Systems</h3>
+            <h3>Kapsch (formerly named Prodata Mobility Systems)</h3>
             <div class="subSection">
                 <h4>Period</h4>
                 <p>2011 - now</p>
@@ -99,7 +99,7 @@
                     <li>Design and management of release scripts and management of releases</li>
                 </ul>
 
-                <h4>Scrum Master workgroup (2014 - nu)</h4>
+                <h4>Scrum Master workgroup (2014 - 2015)</h4>
                 <ul>
                     <li>Gathering all SCRUM Master together in a monthly workshop</li>
                 </ul>
@@ -206,6 +206,11 @@
                         <!--<p class="explanation">
                             Used for developing the GUI part of SimPlant Basic. In accordance with MVVM pattern.
                         </p>-->
+                    </dd>
+
+                    <dt>REST</dt>
+                    <dd>
+                        good
                     </dd>
 
                     <dt>Linq</dt>
@@ -366,7 +371,7 @@
             <h3>Additional Learning</h3>
             <div class="subSection">
                 <dl>
-                    <dt>2013 - 2015</dt>
+                    <dt>2013 - 2016</dt>
                     <dd>
                         <p>Pluralsight Trainings</p>
                         <p class="keywords">
