--- a/overview-nl.html
+++ b/overview-nl.html
@@ -58,7 +58,7 @@
         <h2>Werkervaring</h2>
 
         <div class="details">
-            <h3>Prodata Mobility Systems</h3>
+            <h3>Kapsch (initieel genaamd Prodata Mobility Systems)</h3>
             <div class="subSection">
                 <h4>Periode</h4>
                 <p>2011 - nu</p>
@@ -99,7 +99,7 @@
                     <li>Ontwerp en beheer van release scripts en beheer van deze releases</li>
                 </ul>
 
-                <h4>Scrum Master workgroup (2014 - nu)</h4>
+                <h4>Scrum Master workgroup (2014 - 2015)</h4>
                 <ul>
                     <li>Bijeenbrengen van alle SCRUM masters in een maandelijkse werkgroep</li>
                 </ul>
@@ -202,6 +202,15 @@
 
                         <!--<p class="explanation">
                             Dagelijks gebruik voor applicatie-ontwikkeling. Gebruikt zoals in overeenstemming met het MVVM patroon.
+                        </p>-->
+                    </dd>
+
+                    <dt>REST</dt>
+                    <dd>
+                        goed
+
+                        <!--<p class="explanation">
+                            Gebruikt voor communicatie tussen webapplicaties en client
                         </p>-->
                     </dd>
 
@@ -361,7 +370,7 @@
             <h3>Bijleren</h3>
             <div class="subSection">
                 <dl>
-                    <dt>2013 - 2015</dt>
+                    <dt>2013 - 2016</dt>
                     <dd>
                         <p>Pluralsight Trainings</p>
                         <p class="keywords">
