updated cv, cleaned it up a little bit

--- a/overview-en.html
+++ b/overview-en.html
@@ -22,21 +22,21 @@
                 <dd>
                     05 september 1983
                 </dd>
-                <dt>Sex</dt>
+                <!--<dt>Sex</dt>
                 <dd>
                     male
-                </dd>
+                </dd>-->
                 <dt>Mobile phone</dt>
                 <dd>
                     0498/47.74.10
                 </dd>
                 <dt>License</dt>
                 <dd>
-                    Driver's license type B (car)
+                    Belgian driver's license type B (car)
                 </dd>
                 <dt>E-mail</dt>
                 <dd>
-                    <a href="mailto:servi@telenet.be?subject=Cv">mail me</a>
+                    <a href="mailto:servi@telenet.be?subject=Cv">servi@telenet.be</a>
                 </dd>
             </dl>
         </div>
@@ -48,7 +48,7 @@
 
         <div class="details">
             <p class="tagList">
-                SCRUM Master (Agile Methodologies), C# (.Net), Dutch en English, Test-Driven Development (Specflow),
+                SCRUM Master (Agile Methodologies), C# (.Net), Dutch and English, Test-Driven Development (Specflow),
                 Quality focused, Analytical, Software-oriented companies, Eight year experience
             </p>
         </div>
@@ -65,38 +65,37 @@
 
                 <h4>keywords</h4>
                 <p class="keywords">
-                    C#, .NET 3.5/4.0/4.5, Agile Methodologies, SCRUM Master, WPF, MVVM(C), WCF, REST, webservices, Teamcity, msbuild, Linq,
+                    C#, .NET 3.5/4.0/4.5, Agile Methodologies, SCRUM Master, WPF, MVVM(C), WCF, REST, webservices, WebApi, Teamcity, msbuild, Linq,
                     Oracle, ms SQL, Entity Framework, WiX, MSI, SVN, Team lead, VS 2010/2012/2013, MSMQ, NServiceBus, Telerik controls, Git
                 </p>
 
-                <h4>Scrum Master ITS BO (2013 - nu)</h4>
+                <h4>Scrum Master ITS BO / Software Developer (2013 - now)</h4>
                 <ul>
-                    <li>Aid in (further) development of Obstructions &amp; Detours, Stopzone Manager, PoiTracker and Service Support Manager</li>
-                    <li>Coach Team-members by daily follow-up and relieve them from their impediments</li>
+                    <li>Further development of Obstructions &amp; Detours, Stopzone Manager, PoiTracker and Service Support Manager</li>
+                    <li>Coach Team-members</li>
                     <li>Guardian of SCRUM methodology and organiser of scrum ceremonies (meetings)</li>
                 </ul>
 
                 <h4>Teamlead ITS BO (2012 - 2013)</h4>
                 <ul>
-                    <li>Aid in (further) development of PoiTracker &amp; Service Support Manager</li>
+                    <li>Further development of PoiTracker &amp; Service Support Manager</li>
                     <li>Daily follow-up of team</li>
                     <li>Basic project management and setup planning</li>
-                    <li>Release Packet manager</li>
+                    <!--<li>Release pakket manager</li>-->
                 </ul>
 
-                <h4>Lead developer ITS PoiTracker Johannesburg AFC (2012)</h4>
+                <h4>Lead developer ITS PoiTracker (2012)</h4>
                 <ul>
                     <li>Design architecture PoiTracker</li>
                     <li>Development of first accepted version of this application</li>
                     <li>Advisor and reporter planning</li>
-                    <li>Co-ordinating role in executing tasks for PoiTracker</li>
                 </ul>
 
                 <h4>Software developer Project Johannesburg AFC (2011 - 2012)</h4>
                 <ul>
                     <li>Processing EMV (Eurocard-Mastercard-Visa) transactions</li>
                     <li>Development of new features and bugfixing</li>
-                    <li>Design and management of release scripts and management of releases</li>
+                    <li>Design and management of release scripts and releases</li>
                 </ul>
 
                 <h4>Scrum Master workgroup (2014 - 2015)</h4>
@@ -119,11 +118,11 @@
 
                 <h4>SimPlant Basic/Go (2011)</h4>
                 <ul>
-                    <li>Collaborate with the senior developers to design the architecture of this new product.</li>
                     <li>Develop the first version of this product </li>
+                    <li>Collaborate with the senior developers to design the architecture of this new product</li>
                     <li>Implementing a user-friendly customer-oriented visual attractive interface that also contains animations</li>
                     <li>Design and management of release scripts</li>
-                    <li>Provide support for Application Engineers</li>
+                    <!--<li>Provide support for Application Engineers</li>-->
                 </ul>
 
                 <h4>Online Ordering Management systeem (2007 - 2010)</h4>
@@ -131,15 +130,14 @@
                     <li>Co-designed architecture of Online Ordering Shop</li>
                     <li>Full development responsiblity (bugfixing, maintenance, extending, implementing new requirements and features)</li>
                     <li>Design and management of release scripts and installers</li>
-                    <li>Design and management of the used ms SQL databases</li>
-                    <li>Project management tax service</li>
+                    <!--<li>Design and management of the used ms SQL databases</li>-->
+                    <li>Project management tax service component</li>
                 </ul>
 
                 <h4>Simplant High-End Application (2007 - 2008)</h4>
                 <ul>
                     <li>Design and management of user-friendly installation packages for SimPlant and all its related OEMs</li>
-                    <li>Bugfixing</li>
-                    <li>Implementing smaller requirements</li>
+                    <li>Bugfixing and implementing smaller requirements</li>
                     <li>Final line of customer service support</li>
                     <li>Design and management of release scripts</li>
                 </ul>
@@ -164,7 +162,7 @@
                 </p>
             </div>
 
-            <h3>Telenet</h3>
+            <!--<h3>Telenet</h3>
             <div class="subSection">
                 <h4>Period</h4>
                 <p>August 2005</p>
@@ -176,161 +174,48 @@
                 <p>
                     Adding new features to the biggest gamessite of the country.
                 </p>
-            </div>
+            </div>-->
         </div>
     </div>
 
     <div class="section">
-        <h2>IT specific</h2>
+        <h2>Development specific</h2>
 
 
         <div class="details">
-            <h3>Professional frequent usage</h3>
+            <h3>Professional frequent knowledge</h3>
 
             <div class="subSection">
                 <dl>
-                    <dt>C#</dt>
-                    <dd>
-                        very good
+                    <dt>very good</dt>
+                    <dd>C#</dd>
 
-                        <!--<p class="explanation">
-                            Daily usage for development SimPlant Basic and in the past backoffice applications and web application development
-                        </p>-->
-
-                    </dd>
-
-                    <dt>WPF</dt>
-                    <dd>
-                        good
-
-                        <!--<p class="explanation">
-                            Used for developing the GUI part of SimPlant Basic. In accordance with MVVM pattern.
-                        </p>-->
-                    </dd>
-
-                    <dt>REST</dt>
-                    <dd>
-                        good
-                    </dd>
-
-                    <dt>Linq</dt>
-                    <dd>
-                        good
-
-                        <!--<p class="explanation">
-                            General usage for filtering data
-                        </p>-->
-                    </dd>
-
-                    <dt>SQL <!--(Oracle / Ms SQL)--></dt>
-                    <dd>
-                        good
-
-                        <!--<p class="explanation">
-                            Used for maintaining all database records in our web applications
-                        </p>-->
-
-                    </dd>
-
-                    <dt>WCF</dt>
-                    <dd>
-                        average
-
-                        <!--<p class="explanation">
-                            Gebruikt voor communicatie tussen webapplicaties en client
-                        </p>-->
-                    </dd>
-
-                    <dt>Installers</dt>
-                    <dd>
-                        average
-
-                        <!--<p class="explanation">
-                            Used while making installer with WiX
-                        </p>-->
-
-                    </dd>
+                    <dt>good</dt>
+                    <dd>WPF, REST, Linq, SQL, Entity Framework, WebApi</dd>
+                    
+                    <dt>average</dt>
+                    <dd>WCF, WiX</dd>
                 </dl>
             </div>
 
-            <h3>Limited professional knowledge / Worked with it in the past</h3>
+            <h3>Limited professional knowledge</h3>
             <div class="subSection">
                 <dl>
-                    <dt>ASP .NET</dt>
-                    <dd>
-                        very good
+                    <dt>average</dt>
+                    <dd>ASP. NET, HTML, CSS, Javascript</dd>
 
-                        <!--<p class="explanation">
-                            usage for web applications
-                        </p>-->
-
-                    </dd>
-
-                    <dt>Finalbuilder</dt>
-                    <dd>
-                        average
-
-                        <!--<p class="explanation">
-                            Used for easily create releases of our software components
-                        </p>-->
-
-                    </dd>
-
-                    <dt>WF</dt>
-                    <dd>
-                        basic
-
-                        <!--<p class="explanation">
-                            Used for backoffice notification system
-                        </p>-->
-
-                    </dd>
-
-                    <dt>C++</dt>
-                    <dd>
-                        basic
-
-                        <!--<p class="explanation">
-                            Daily usage at my previous work for the code behind of the web application
-                        </p>-->
-
-                    </dd>
-                    <dt>PHP</dt>
-                    <dd>
-                        basic
-                    </dd>
-                    <dt>XHTML</dt>
-                    <dd>
-                        average
-                    </dd>
-                    <dt>CSS</dt>
-                    <dd>
-                        average
-                    </dd>
-                    <dt>Javascript</dt>
-                    <dd>
-                        average
-
-                        <!--<p class="explanation">
-                            I created hobbysites in the past with those 4 langauges. At telenet I used these
-                            technologies to deliver new features to their gaming site.
-                        </p>-->
-
-                    </dd>
+                    <dt>basic</dt>
+                    <dd>C++, PHP</dd>
                 </dl>
             </div>
 
-            <h3>Scholar knowledge</h3>
+            <h3>Knowledge from experimenting</h3>
 
             <div class="subSection">
                 <dl>
-                    <dt>VB .NET</dt>
+                    <dt>basic knowledge</dt>
                     <dd>
-                        scholar knowledge
-                    </dd>
-                    <dt>Java</dt>
-                    <dd>
-                        scholar knowledge
+                        AngularJS, AngularJS 2, Typescript, .NET core
                     </dd>
                 </dl>
             </div>
@@ -339,36 +224,30 @@
     </div>
 
     <div class="section">
-        <h2>Language knowledge</h2>
+        <h2>Languages</h2>
 
         <div class="details">
             <dl>
-                <dt>Dutch</dt>
+                <dt>Mother tongue</dt>
                 <dd>
-                    Mother tongue
+                    Dutch
                 </dd>
-                <dt>English</dt>
+                <dt>Very good</dt>
                 <dd>
-                    Second language at my current work, daily usage
+                    English
                 </dd>
-                <dt>French</dt>
-                <dd>
-                    Scholar knowledge
-                </dd>
-                <dt>German</dt>
-                <dd>
-                    Scholar knowledge
-                </dd>
+                <dt>Scholar knowledge</dt>
+                <dd>French, German</dd>
             </dl>
         </div>
 
     </div>
 
     <div class="section">
-        <h2>Learn</h2>
+        <h2>Learning</h2>
 
         <div class="details">
-            <h3>Additional Learning</h3>
+            <h3>Self-training</h3>
             <div class="subSection">
                 <dl>
                     <dt>2013 - 2016</dt>
@@ -422,11 +301,11 @@
                     <li>Thesis : Synchronous streaming of a video archive (Accel Edegem) (Accel Edegem)</li>
                 </ul>
 
-                <h4>Latijn-Wetenschappen (1996 - 2002)</h4>
+                <!--<h4>Latijn-Wetenschappen (1996 - 2002)</h4>
                 <ul>
                     <li>Latin-Sciences</li>
                     <li>Onze Lieve Vrouwecollege Antwerpen</li>
-                </ul>
+                </ul>-->
 
             </div>
 
