--- a/overview-nl.html
+++ b/overview-nl.html
@@ -22,17 +22,17 @@
                 <dd>
                     05 september 1983
                 </dd>
-                <dt>Geslacht</dt>
+                <!--<dt>Geslacht</dt>
                 <dd>
                     mannelijk
-                </dd>
+                </dd>-->
                 <dt>GSM</dt>
                 <dd>
                     0498/47.74.10
                 </dd>
                 <dt>Rijbewijs</dt>
                 <dd>
-                    type B
+                    Belgisch, type B
                 </dd>
                 <dt>E-mail</dt>
                 <dd>
@@ -65,14 +65,14 @@
 
                 <h4>sleutelwoorden</h4>
                 <p class="keywords">
-                    C#, .NET 3.5/4.0/4.5, Agile Methodologies, SCRUM Master, WPF, MVVM(C), WCF, REST, webservices, Teamcity, msbuild, Linq,
+                    C#, .NET 3.5/4.0/4.5, Agile Methodologies, SCRUM Master, WPF, MVVM(C), WCF, REST, webservices, WebApi, Teamcity, msbuild, Linq,
                     Oracle, ms SQL, Entity Framework, WiX, MSI, SVN, Team lead, VS 2010/2012/2013, MSMQ, NServiceBus, Telerik controls, Git
                 </p>
 
                 <h4>Scrum Master ITS BO (2013 - nu)</h4>
                 <ul>
-                    <li>Meehelpen bij de (verdere) ontwikkeling van een Obstructions &amp; Detours, stopzone manager, PoiTracker en Service Support Manager </li>
-                    <li>Teamleden begeleiden door dagelijke opvolging en hen vrijwaren van enige hindernissen</li>
+                    <li>Verdere ontwikkeling van een Obstructions &amp; Detours, stopzone manager, PoiTracker en Service Support Manager </li>
+                    <li>Teamleden coachen</li>
                     <li>Bewaker van SCRUM methodologie en organisator van de scrum ceremonies (meetings)</li>
                 </ul>
 
@@ -81,15 +81,15 @@
                     <li>Meehelpen bij de (verdere) ontwikkeling van PoiTracker en Service Support Manager </li>
                     <li>Dagelijkse opvolging van het team</li>
                     <li>Basis project management en opstellen planning</li>
-                    <li>Release pakket beheerder</li>
+                    <!--<li>Release pakket beheerder</li>-->
                 </ul>
 
-                <h4>Lead developer ITS PoiTracker Johannesburg AFC (2012)</h4>
+                <h4>Lead developer ITS PoiTracker (2012)</h4>
                 <ul>
                     <li>Uitwerken architectuur PoiTracker</li>
                     <li>Ontwikkeling van de eerste geaccepteerde versie van deze applicatie</li>
                     <li>Adviseur en rapporteerder planning</li>
-                    <li>Afstemmende rol bij het uitvoeren van de taken voor PoiTracker</li>
+                    <!--<li>Afstemmende rol bij het uitvoeren van de taken voor PoiTracker</li>-->
                 </ul>
 
                 <h4>Software developer Project Johannesburg AFC (2011 - 2012)</h4>
@@ -161,7 +161,7 @@
                 </p>
             </div>
 
-            <h3>Telenet</h3>
+            <!--<h3>Telenet</h3>
             <div class="subSection">
                 <h4>Periode</h4>
                 <p>Agustus 2005</p>
@@ -173,194 +173,70 @@
                 <p>
                     Toevoegen van nieuwe features aan de grootste gamessite van het land.
                 </p>
-            </div>
+            </div>-->
         </div>
     </div>
 
     <div class="section">
-        <h2>Informatica specifiek</h2>
-
+        <h2>Development specifiek</h2>
 
         <div class="details">
-            <h3>Professioneel frequent gebruik</h3>
+            <h3>Frequent professioneel gebruikt</h3>
 
             <div class="subSection">
                 <dl>
-                    <dt>C#</dt>
-                    <dd>
-                        zeer goed
+                    <dt>zeer goed</dt>
+                    <dd>C#</dd>
 
-                        <!--<p class="explanation">
-                            Dagelijks gebruik voor applicatie-ontwikkeling
-                        </p>-->
+                    <dt>goed</dt>
+                    <dd>WPF, REST, Linq, SQL, Entity Framework, WebApi</dd>
 
-                    </dd>
-
-                    <dt>WPF</dt>
-                    <dd>
-                        goed
-
-                        <!--<p class="explanation">
-                            Dagelijks gebruik voor applicatie-ontwikkeling. Gebruikt zoals in overeenstemming met het MVVM patroon.
-                        </p>-->
-                    </dd>
-
-                    <dt>REST</dt>
-                    <dd>
-                        goed
-
-                        <!--<p class="explanation">
-                            Gebruikt voor communicatie tussen webapplicaties en client
-                        </p>-->
-                    </dd>
-
-                    <dt>Linq</dt>
-                    <dd>
-                        goed
-
-                        <!--<p class="explanation">
-                            Algemeen gebruik voor het filteren van data
-                        </p>-->
-                    </dd>
-
-                    <dt>SQL <!--(Oracle / Ms SQL)--></dt>
-                    <dd>
-                        goed
-                        <!--<p class="explanation">
-                            Gebruikt voor het beheren van database gegevens. Gebruikt via Entity Framework.
-                        </p>-->
-
-                    </dd>
-
-                    <dt>WCF</dt>
-                    <dd>
-                        gemiddeld
-
-                        <!--<p class="explanation">
-                            Gebruikt voor communicatie tussen webapplicaties en client
-                        </p>-->
-                    </dd>
-
-                    <dt>Installers</dt>
-                    <dd>
-                        gemiddeld
-
-                        <!--<p class="explanation">
-                            Gebruikt bij het maken van installaties aan de hand van WiX
-                        </p>-->
-
-                    </dd>
+                    <dt>gemiddeld</dt>
+                    <dd>WCF, WiX</dd>
                 </dl>
             </div>
 
-            <h3>Beperkt professioneel gebruik / Verleden mee gewerkt</h3>
+            <h3>Beperkt professioneel gebruikt</h3>
             <div class="subSection">
                 <dl>
-                    <dt>ASP .NET</dt>
-                    <dd>
-                        gemiddeld
+                    <dt>gemiddeld</dt>
+                    <dd>ASP. NET, HTML, CSS, Javascript</dd>
 
-                        <!--<p class="explanation">
-                            gebruikt voor het ontwikkelen van webapplicaties
-                        </p>-->
-
-                    </dd>
-
-                    <dt>Finalbuilder</dt>
-                    <dd>
-                        gemiddeld
-
-                        <!--<p class="explanation">
-                            Gebruikt voor het beheren en uitbrengen van releases
-                        </p>-->
-
-                    </dd>
-
-                    <dt>Workflows</dt>
-                    <dd>
-                        basis
-
-                        <!--<p class="explanation">
-                            Gebruikt voor backoffice notification system
-                        </p>-->
-
-                    </dd>
-
-                    <dt>C++</dt>
-                    <dd>
-                        basis
-                        <!--<p class="explanation">
-                            Vorig werk dagelijks gebruik voor de code-behind van hun webapplicaties
-                        </p>-->
-
-                    </dd>
-                    <dt>PHP</dt>
-                    <dd>
-                        basis
-                    </dd>
-                    <dt>XHTML</dt>
-                    <dd>
-                        gemiddeld
-                    </dd>
-                    <dt>CSS</dt>
-                    <dd>
-                        gemiddeld
-                    </dd>
-                    <dt>Javascript</dt>
-                    <dd>
-                        gemiddeld
-
-                        <!--<p class="explanation">
-                            Vroeger hobbysites met gebruik van deze 4 talen mee gemaakt en bij Telenet voor
-                            nieuwe features gezorgd voor hun gamessite
-                        </p>-->
-
-                    </dd>
+                    <dt>basis</dt>
+                    <dd>C++, PHP</dd>
                 </dl>
             </div>
 
-            <h3>Schoolse kennis</h3>
+            <h3>gebruikt bij experimenteren</h3>
 
             <div class="subSection">
                 <dl>
-                    <dt>VB .NET</dt>
+                    <dt>basis</dt>
                     <dd>
-                        schools
-                    </dd>
-                    <dt>Java</dt>
-                    <dd>
-                        schools
+                        AngularJS, AngularJS 2, Typescript, .NET core
                     </dd>
                 </dl>
             </div>
         </div>
-
     </div>
 
     <div class="section">
-        <h2>Talenkennis</h2>
+        <h2>Talen</h2>
 
         <div class="details">
             <dl>
-                <dt>Nederlands</dt>
+                <dt>moedertaal</dt>
                 <dd>
-                    Moedertaal
+                    Nederlands
                 </dd>
-                <dt>Engels</dt>
+                <dt>zeer goed</dt>
                 <dd>
-                    De voertaal in mijn huidige positie; dagelijks gebruikt
+                    English
                 </dd>
-                <dt>Frans</dt>
-                <dd>
-                    Schoolse kennis
-                </dd>
-                <dt>Duits</dt>
-                <dd>
-                    Schoolse kennis
-                </dd>
+                <dt>schools</dt>
+                <dd>Frans, Duits</dd>
             </dl>
         </div>
-
     </div>
 
     <div class="section">
