--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>Online C.V. Servaas Phlips</title>
+    <title>C.V. Servaas Phlips</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="Content/bootstrap.css" type="text/css" />
     <link rel="stylesheet" href="Content/bootstrap-theme.css" type="text/css" />
@@ -23,7 +23,7 @@
     <div id="header">
         <div id="headerContent">
 
-            <h1>Online CV Servaas Phlips</h1>
+            <h1>C.V. Servaas Phlips</h1>
 
             <div id="languageBar" data-ng-controller="LanguageController">
                 <div id="languageSelectionBar">
